Created API, PetOwnerService, Unit Tests and DTO.

--- a/PetsConsoleApp.Tests/packages.config
+++ b/PetsConsoleApp.Tests/packages.config
@@ -2,4 +2,7 @@
 <packages>
   <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="System.ComponentModel.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="net461" />
 </packages>
