Business logic created, unit test for Business Logic created.

--- a/PetsConsoleApp.Tests/app.config
+++ b/PetsConsoleApp.Tests/app.config
@@ -8,4 +8,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <appSettings>
+    <add key="ApiUrl" value="http://agl-developer-test.azurewebsites.net/people.json" />
+  </appSettings>
 </configuration>
