XUnit units tests added for logic layer

--- a/PetConsole.XunitV2/PetConsole.XunitV2.csproj
+++ b/PetConsole.XunitV2/PetConsole.XunitV2.csproj
@@ -70,6 +70,7 @@
   <ItemGroup>
     <Compile Include="UnitTestApiClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitTestPetOwnerLogic.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
